--- a/styles.css
+++ b/styles.css
@@ -20,7 +20,7 @@ html {
   
   .key {
     border: .4rem solid black;
-    border-radius: 50%;
+    border-radius: 15%;
     margin: 1rem;
     font-size: 1.5rem;
     padding: 1rem .5rem;
@@ -33,9 +33,9 @@ html {
   }
   
   .playing {
-    transform: scale(1.1);
-    border-color: #ffc600;
-    box-shadow: 0 0 1rem #ffc600;
+    transform: scale(1.3);
+    border-color: #01579B;
+    box-shadow: 0 0 1rem #01579B;
   }
   
   kbd {
